# shift-hackathon-nantes-2026

./: README.md
hodoor/: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  Dockerfile.odoo  README.md  docker-compose.yml  odoo-entrypoint-cc.sh  odoo_cc_start.py  pyproject.toml
hodoor/.claude/agents/add/: implement.md  intent.md  plan.md  vision.md
hodoor/.claude/commands/dev/: add.md  ship.md
hodoor/bot/: chat_registry.py  commands.py  config.py  db.py  handlers.py  history.py  llm.py  main.py  odoo.py  push.py  rate_limiter.py  search.py  session.py  tools.py  tts.py
hodoor/bot/api/: __init__.py  app.py  appliances.py  auth.py  chat.py  deps.py  maintenance.py  models.py  push.py
hodoor/bot/bran/: api.py  client.py  mock.py
hodoor/bot/prompts/: system.md  system_onboarding.md  tone.md
hodoor/docs/: images-appareils.md
hodoor/docs/cycles/: current
hodoor/docs/cycles/hodoor-webapp/: 01-vision.md  02-brief.md  03-prd.md  (+1 more)
hodoor/odoo_addons/maintenance_image/: __manifest__.py
hodoor/scripts/: mock_jeedom.py  seed_jeedom.py
hodoor/ui/: test_chat.py
hodoor/web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
hodoor/web/public/: manifest.json  sw.js
hodoor/web/src/: App.tsx  AppContext.tsx  api.ts  auth.tsx  index.css  main.tsx  notifications.ts
rAIdio/backend/: alert_sound.py  cli.py  demo.py  download_models.py  embedding.py  ingest.py  keywords.py  llm.py  main.py  memory.py  pi_mouse_ptt.py  prompts.py  pyproject.toml  radio_monitor.py  rag.py  stt.py  text_utils.py  tts.py
(+870 files in other folders)
