[project]
name = "homeops-bot"
version = "0.1.0"
description = "Telegram AI bot for homeops"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "openai>=1.30.0",
    "tavily-python>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "aiosqlite>=0.20.0",
    "pywebpush>=2.0.3",
    "python-multipart>=0.0.9",
    "email-validator>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]
