[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.135.2",
    "kokoro-onnx>=0.5.0",
    "ollama>=0.6.1",
    "psutil>=7.2.2",
    "pywhispercpp>=1.4.1",
    "requests>=2.32.0",
    "sentence-transformers>=5.3.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.42.0",
    "websockets>=16.0",
]
